--- a/README
+++ b/README
@@ -9,3 +9,7 @@ numdevices = info.get('deviceCount')
 for i in range(0, numdevices):
     if (p.get_device_info_by_host_api_device_index(0, i).get('maxInputChannels')) > 0:
         print("Input Device id ", i, " - ", p.get_device_info_by_host_api_device_index(0, i).get('name'))
+
+
+Volume:
+sudo amixer cset numid=1 100%
